@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-24T08:30:07Z",
-  "count_outdated" : 507,
-  "uniques_outdated" : 324,
-  "count" : 540,
-  "uniques" : 346,
+  "timestamp" : "2022-09-25T02:37:39Z",
+  "count_outdated" : 509,
+  "uniques_outdated" : 325,
+  "count" : 542,
+  "uniques" : 347,
   "clones" : [
-    {
-      "timestamp": "2022-09-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-11T00:00:00Z",
       "count": 3,
@@ -102,6 +95,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-09-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
