@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-09-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-11T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -71,6 +66,11 @@
       "timestamp": "2022-09-23T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-09-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
