@@ -1,3 +1,11 @@
+2022-09-25T02:37:39Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3120616955
+* notice: last 14d: unq all: 2 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 324 507 / 346 540
+* notice: next accum: outdated-unq outdated-all / unq all: 325 509 / 347 542
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-09-10] / [2022-09-24]
+
 2022-09-24T08:30:07Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3117655208
 * notice: last 14d: unq all: 2 33
